--- a/public/calendar.html
+++ b/public/calendar.html
@@ -1,13 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>EWU Calendar</title>
+    <meta name="color-scheme" content="light dark" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
   </head>
 
   <body>
     <h1><a href="/">EWU Calendar</a></h1>
+    <hr />
     <div id="root">Loading...</div>
     <div id="calendar"></div>
 
